# medicare-ai

./: .env.example  .gitignore  README.md  pyproject.toml  server.py
.aixplain_cache/: functions.json  languages.json  licenses.json
config/: settings.py
frontend/: about.html  ai-doctor.html  appointment.html  hospital-beds.html  index.html  loggedin.html  login.html  medicine-delivery.html  medicine-delivery.js  signup.html  training.html
src/: ai_doctor.py  app.py  auth.py  bookings.py  database.py  email_service.py  routes.py
tests/: conftest.py  test_app.py
utils/: logging_setup.py
